# office-sim-openenv

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: docs.json  emails.json  meetings.json
env/: main_env.py
server/: app.py
tasks/: graders.py
