[project]
name = "office-sim-openenv"
version = "0.1.0"
description = "Office simulation OpenEnv environment"
authors = [{ name = "jwell123" }]

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openai",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "server.app:app"

